--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,8 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="back_btn">back btn</string>
+    <string name="about">About</string>
+    <string name="base_status">Base Status</string>
+    <string name="evolution">Evolution</string>
 </resources>
