--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,14 @@
     <string name="about">About</string>
     <string name="base_status">Base Status</string>
     <string name="evolution">Evolution</string>
+    <string name="species">Species</string>
+    <string name="height">Height</string>
+    <string name="brief">brief</string>
+    <string name="weight">Weight</string>
+    <string name="ability">Ability</string>
+    <string name="habitat">Habitat</string>
+    <string name="generation">Generation</string>
+    <string name="egg_group">Egg Group</string>
+    <string name="poke_image">poke image</string>
+    <string name="nature">Nature</string>
 </resources>
