--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,4 +108,12 @@
     <string name="egg_group">Egg Group</string>
     <string name="poke_image">poke image</string>
     <string name="nature">Nature</string>
+    <string name="id">#004</string>
+    <string name="hp">HP</string>
+    <string name="attack">Attack</string>
+    <string name="defense">Defense</string>
+    <string name="sp_atk">Sp.Atk</string>
+    <string name="sp_def">Sp.Def</string>
+    <string name="speed">Speed</string>
+    <string name="total">Total</string>
 </resources>
